--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.compassuol.sp.challenge</groupId>
-	<artifactId>ms-products</artifactId>
+	<artifactId>msproducts</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ms-products</name>
 	<description>Demo project for Spring Boot</description>
