--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -8,17 +8,18 @@ spring:
     url: jdbc:mysql://localhost:3306/db_ecommerce?createDatabaseIfNotExist=true&serverTimezone=UTC
     username: root
     password: root
-    jpa:
-      hibernate:
-        ddl-auto: update
-      show-sql: true
+  jpa:
+    hibernate:
+      ddl-auto: update
       properties:
         hibernate:
-          dialect: org.hibernate.dialect.MySQL57Dialect
-    flyway:
-      url: jdbc:mysql://localhost:3306/db_ecommerce?useTimezone=true&serverTimezone=UTC
-      user: root
-      password: root
+          dialect: org.hibernate.dialect.MySQL8Dialect
+      defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
+      continue-on-error: true
+
 #  springdoc:
 #    show-actuator: true
 #    api-docs:
