--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: ms-product
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/db_ecommerce?createDatabaseIfNotExist=true&serverTimezone=UTC
+    url: jdbc:mysql://mysql-service:3306/db_ecommerce?createDatabaseIfNotExist=true&serverTimezone=UTC
     username: root
     password: root
   jpa:
