--- a/ms-feedback/src/main/resources/application.yml
+++ b/ms-feedback/src/main/resources/application.yml
@@ -1,21 +1,24 @@
 server:
-  port: 8080
+  port: 8100
 spring:
   application:
     name: ms-feedback
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://mysql-service:3306/db_ecommerce?createDatabaseIfNotExist=true&serverTimezone=UTC
-    username: root
+    driverClassName: com.mysql.cj.jdbc.Driver
     password: root
+    url: jdbc:mysql://localhost:3306/db_ecommerce?createDatabaseIfNotExist=true&serverTimezone=UTC
+    username: root
+
   jpa:
     hibernate:
       ddl-auto: update
-      properties:
-        hibernate:
-          dialect: org.hibernate.dialect.MySQL8Dialect
-      defer-datasource-initialization: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    defer-datasource-initialization: true
   sql:
     init:
       mode: always
       continue-on-error: true
+  jackson:
+    default-property-inclusion: NON_NULL
