--- a/ms-feedback/src/main/resources/application.yml
+++ b/ms-feedback/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     password: root
-    url: jdbc:mysql://localhost:3306/db_ecommerce?createDatabaseIfNotExist=true&serverTimezone=UTC
+    url: jdbc:mysql://mysql-service:3306/db_ecommerce?createDatabaseIfNotExist=true&serverTimezone=UTC
     username: root
   jpa:
     hibernate:
