--- a/ms-feedbacks/pom.xml
+++ b/ms-feedbacks/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.compassuol.sp.challenge</groupId>
-	<artifactId>ms-feedback</artifactId>
+	<artifactId>msfeedback</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ms-feedback</name>
 	<description>Demo project for Spring Boot</description>
